# zellij-plugins

./: CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-15-zellij-macism-plugin.md  2026-06-01-pipe-force-abc-plan.md
docs/superpowers/specs/: 2026-05-15-zellij-macism-plugin-design.md  2026-06-01-pipe-force-abc-design.md
src/: lib.rs  main.rs  state.rs
tests/: state_tests.rs
