[package]
name = "zellij-macism"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin that switches macOS input method via macism on mode change"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zellij-tile = "=0.44.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
