[package]
name = "zellij-macism"
version = "0.1.0"
edition = "2021"
description = "Zellij plugin that switches macOS input method via macism on mode change"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "zellij-macism"
path = "src/main.rs"
required-features = ["wasm-plugin"]

[features]
wasm-plugin = []

[dependencies]
zellij-tile = "=0.44.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
